Заменил авторизацию на авторизацию по заголовку
